objects/Shipment.object
<CustomObject>
    <fields>
        <fullName>Insp_Lot_Usage_Decision__c</fullName>
        <description>Insp. Lot Usage Decision</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Only CoA approved records must be displayed</inlineHelpText>
        <label>Insp. Lot Usage Decision</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AlternateSubstituteProduct__c</fullName>
        <description>This field captures the alternate Substitute Product.</description>
        <label>Alternate/Substitute Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alternate Product</fullName>
                </value>
                <value>
                    <fullName>Substitute Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ContractNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CurrentCarrier__c</fullName>
        <description>This is used in intellitrans integration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CurrentCoordinates__c</fullName>
        <description>This field is used in intellitrans integration</description>
        <label>Current Coordinates</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CurrentLocation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CustomerAgreedPriceFPD__c</fullName>
        <description>This field captures the customer Price (FPD).</description>
        <label>Customer Agreed Price (FPD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DaysPastShipped__c</fullName>
        <formula>TODAY()  -  PMC_CPQ_ShippedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Past Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryActualGIDate__c</fullName>
        <description>Actual date when goods issued.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Actual GI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryCreatedByName__c</fullName>
        <description>This field captures the  user created the delivery in sap</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Created By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryItemID__c</fullName>
        <description>This field captures the delivery Item ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Item ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryItemName__c</fullName>
        <description>This field captures the delivery Item Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryPlannedGIDate__c</fullName>
        <description>Planned date for good to be released.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Planned GI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryPlannedvsActualGI__c</fullName>
        <description>Difference between actual &amp; planned</description>
        <label>Delivery Planned vs Actual GI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryQuantity__c</fullName>
        <description>This field captures the delivery Delivery Quantity.</description>
        <label>Delivery Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryStatus__c</fullName>
        <description>This field captures the delivery Delivery Status.</description>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Shipped</fullName>
                </value>
                <value>
                    <fullName>Partially Shipped</fullName>
                </value>
                <value>
                    <fullName>Completely Shipped</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <isActive>false</isActive>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                    <isActive>false</isActive>
                    <label>Shipped</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Destination__c</fullName>
        <label>Destination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_DestinationCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ETA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_EstimatedDeliveryDate__c</fullName>
        <description>This field is to store the Estimated Delivery Date which will be received as part of 066I and will be stored in the Mosaic Direct Delivery Dashboard.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_GoodsIssueStatus__c</fullName>
        <description>The Status of goods issue.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Goods Issue Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LoadingDate__c</fullName>
        <description>Date on which the goods are to be loaded.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ModeofTransportation__c</fullName>
        <inlineHelpText>Select the appropriate mode from the available options to track and manage logistics effectively.</inlineHelpText>
        <label>MOT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_MoT</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderDocument__c</fullName>
        <description>This field captures the order PO etc.</description>
        <label>Order Document</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bill of Lading</fullName>
                </value>
                <value>
                    <fullName>Certificate of Analysis</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderStatus__c</fullName>
        <description>This field captures the Order status</description>
        <formula>TEXT(PMC_CPQ_Order__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field captures the Order Number.</description>
        <label>Order Number</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OriginLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The plant location associated to this delivery</description>
        <label>Origin Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Origin__c</fullName>
        <description>This field captures the origin .</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PO__c</fullName>
        <description>This field is used to capture the user input for Purchase order number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Purchase Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PlantID__c</fullName>
        <description>This field captures the  Plant ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Plant ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RailCarNumber__c</fullName>
        <description>This field captures the rail Number IntelliTrans.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rail Car Number (IntelliTrans)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Route__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Route</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPDeliveryID__c</fullName>
        <description>This field captures the sap Delivery ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SAP Delivery ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPOrderID__c</fullName>
        <description>This field captures the sap Order ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPOrderlineID__c</fullName>
        <description>This field captures the sap line ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Order line ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesPrice__c</fullName>
        <description>This field captures the sales Sales Price.</description>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShipToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deliveries (Ship To Account)</relationshipLabel>
        <relationshipName>Deliveries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deliveries (Ship To)</relationshipLabel>
        <relationshipName>Deliveries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShippedDate__c</fullName>
        <description>This field captures the shipped  Date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShippingPoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Point</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TowName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TransportationPlanningDate__c</fullName>
        <description>Date on which the transportation is planned.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Transportation Planning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TruckNumber__c</fullName>
        <description>This field captures the Truck Number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Truck Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_UoMUnitofMeasure__c</fullName>
        <description>This field captures the uom of Measure.</description>
        <inlineHelpText>Specify the unit in which the value of this field will be measured</inlineHelpText>
        <label>UoM Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_UnitOfMeasure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_VehicleID__c</fullName>
        <description>This field captures the vehicle Vehicle ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_VesselID__c</fullName>
        <description>This field captures the vessel Vessel ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vessel ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Weight__c</fullName>
        <description>The total weight of the shipment.</description>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SAPDeliveryCreatedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Delivery Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OrderActivationDate__c</fullName>
        <description>Related order activation date</description>
        <formula>PMC_CPQ_Order__r.ActivatedDate</formula>
        <label>Order Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OrderStatusCode__c</fullName>
        <description>status category of order</description>
        <formula>TEXT( PMC_CPQ_Order__r.StatusCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Status Code</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>PMC_CPQ_AllDeliveries</fullName>
        <columns>Name</columns>
        <columns>PMC_CPQ_Product__c</columns>
        <columns>PMC_CPQ_DeliveryStatus__c</columns>
        <columns>PMC_CPQ_Order__c</columns>
        <columns>PMC_CPQ_PO__c</columns>
        <columns>PMC_CPQ_ContractNumber__c</columns>
        <columns>PMC_CPQ_Account__c</columns>
        <columns>PMC_CPQ_VehicleID__c</columns>
        <columns>PMC_CPQ_ShippedDate__c</columns>
        <columns>PMC_CPQ_CurrentLocation__c</columns>
        <columns>DestinationLocation</columns>
        <columns>PMC_CPQ_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Deliveries</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_CompletelyShippedDeliveries</fullName>
        <columns>Name</columns>
        <columns>PMC_CPQ_Product__c</columns>
        <columns>PMC_CPQ_DeliveryStatus__c</columns>
        <columns>PMC_CPQ_Order__c</columns>
        <columns>PMC_CPQ_PO__c</columns>
        <columns>PMC_CPQ_ContractNumber__c</columns>
        <columns>PMC_CPQ_Account__c</columns>
        <columns>PMC_CPQ_VehicleID__c</columns>
        <columns>PMC_CPQ_ShippedDate__c</columns>
        <columns>PMC_CPQ_CurrentLocation__c</columns>
        <columns>DestinationLocation</columns>
        <columns>PMC_CPQ_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_DeliveryStatus__c</field>
            <operation>equals</operation>
            <value>Completely Shipped</value>
        </filters>
        <label>Completely Shipped Deliveries</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_DeliveriesByBarge</fullName>
        <columns>Name</columns>
        <columns>PMC_CPQ_Product__c</columns>
        <columns>PMC_CPQ_DeliveryStatus__c</columns>
        <columns>PMC_CPQ_Order__c</columns>
        <columns>PMC_CPQ_PO__c</columns>
        <columns>PMC_CPQ_ContractNumber__c</columns>
        <columns>PMC_CPQ_Account__c</columns>
        <columns>PMC_CPQ_VehicleID__c</columns>
        <columns>PMC_CPQ_ShippedDate__c</columns>
        <columns>PMC_CPQ_CurrentLocation__c</columns>
        <columns>DestinationLocation</columns>
        <columns>PMC_CPQ_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <label>Barge Deliveries</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_DeliveriesByRail</fullName>
        <columns>Name</columns>
        <columns>PMC_CPQ_Product__c</columns>
        <columns>PMC_CPQ_DeliveryStatus__c</columns>
        <columns>PMC_CPQ_Order__c</columns>
        <columns>PMC_CPQ_PO__c</columns>
        <columns>PMC_CPQ_ContractNumber__c</columns>
        <columns>PMC_CPQ_Account__c</columns>
        <columns>PMC_CPQ_VehicleID__c</columns>
        <columns>PMC_CPQ_ShippedDate__c</columns>
        <columns>PMC_CPQ_CurrentLocation__c</columns>
        <columns>DestinationLocation</columns>
        <columns>PMC_CPQ_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <label>Rail Deliveries</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_DeliveriesByTruck</fullName>
        <columns>Name</columns>
        <columns>PMC_CPQ_Product__c</columns>
        <columns>PMC_CPQ_DeliveryStatus__c</columns>
        <columns>PMC_CPQ_Order__c</columns>
        <columns>PMC_CPQ_PO__c</columns>
        <columns>PMC_CPQ_ContractNumber__c</columns>
        <columns>PMC_CPQ_Account__c</columns>
        <columns>PMC_CPQ_VehicleID__c</columns>
        <columns>PMC_CPQ_ShippedDate__c</columns>
        <columns>PMC_CPQ_CurrentLocation__c</columns>
        <columns>DestinationLocation</columns>
        <columns>PMC_CPQ_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <label>Truck Deliveries</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_DeliveriesByVessel</fullName>
        <columns>Name</columns>
        <columns>PMC_CPQ_Product__c</columns>
        <columns>PMC_CPQ_DeliveryStatus__c</columns>
        <columns>PMC_CPQ_Order__c</columns>
        <columns>PMC_CPQ_PO__c</columns>
        <columns>PMC_CPQ_ContractNumber__c</columns>
        <columns>PMC_CPQ_Account__c</columns>
        <columns>PMC_CPQ_VehicleID__c</columns>
        <columns>PMC_CPQ_ShippedDate__c</columns>
        <columns>PMC_CPQ_CurrentLocation__c</columns>
        <columns>DestinationLocation</columns>
        <columns>PMC_CPQ_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <label>Vessel Deliveries</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_DeliveriesShippedPast7Days</fullName>
        <columns>Name</columns>
        <columns>PMC_CPQ_Product__c</columns>
        <columns>PMC_CPQ_DeliveryStatus__c</columns>
        <columns>PMC_CPQ_Order__c</columns>
        <columns>PMC_CPQ_PO__c</columns>
        <columns>PMC_CPQ_ContractNumber__c</columns>
        <columns>PMC_CPQ_Account__c</columns>
        <columns>PMC_CPQ_VehicleID__c</columns>
        <columns>PMC_CPQ_ShippedDate__c</columns>
        <columns>PMC_CPQ_CurrentLocation__c</columns>
        <columns>DestinationLocation</columns>
        <columns>PMC_CPQ_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_DaysPastShipped__c</field>
            <operation>greaterOrEqual</operation>
            <value>7</value>
        </filters>
        <label>Shipped Deliveries(Past 7 Days)</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_DeliveriesyettobeShipped</fullName>
        <columns>Name</columns>
        <columns>PMC_CPQ_Product__c</columns>
        <columns>PMC_CPQ_DeliveryStatus__c</columns>
        <columns>PMC_CPQ_Order__c</columns>
        <columns>PMC_CPQ_PO__c</columns>
        <columns>PMC_CPQ_ContractNumber__c</columns>
        <columns>PMC_CPQ_Account__c</columns>
        <columns>PMC_CPQ_VehicleID__c</columns>
        <columns>PMC_CPQ_ShippedDate__c</columns>
        <columns>PMC_CPQ_CurrentLocation__c</columns>
        <columns>DestinationLocation</columns>
        <columns>PMC_CPQ_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_DeliveryStatus__c</field>
            <operation>equals</operation>
            <value>Not yet Shipped</value>
        </filters>
        <label>Deliveries yet to be Shipped</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_MyDeliveries</fullName>
        <columns>Name</columns>
        <columns>PMC_CPQ_Product__c</columns>
        <columns>PMC_CPQ_DeliveryStatus__c</columns>
        <columns>PMC_CPQ_Order__c</columns>
        <columns>PMC_CPQ_PO__c</columns>
        <columns>PMC_CPQ_ContractNumber__c</columns>
        <columns>PMC_CPQ_Account__c</columns>
        <columns>PMC_CPQ_VehicleID__c</columns>
        <columns>PMC_CPQ_ShippedDate__c</columns>
        <columns>PMC_CPQ_CurrentLocation__c</columns>
        <columns>DestinationLocation</columns>
        <columns>PMC_CPQ_ETA__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Deliveries</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_PartiallyShippedDeliveries</fullName>
        <columns>Name</columns>
        <columns>PMC_CPQ_Product__c</columns>
        <columns>PMC_CPQ_DeliveryStatus__c</columns>
        <columns>PMC_CPQ_Order__c</columns>
        <columns>PMC_CPQ_PO__c</columns>
        <columns>PMC_CPQ_ContractNumber__c</columns>
        <columns>PMC_CPQ_Account__c</columns>
        <columns>PMC_CPQ_VehicleID__c</columns>
        <columns>PMC_CPQ_ShippedDate__c</columns>
        <columns>PMC_CPQ_CurrentLocation__c</columns>
        <columns>DestinationLocation</columns>
        <columns>PMC_CPQ_ETA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_DeliveryStatus__c</field>
            <operation>equals</operation>
            <value>Partially Shipped</value>
        </filters>
        <label>Partially Shipped Deliveries</label>
    </listViews>
    <recordTypes>
        <fullName>PMC_CPQ_Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Restrict_Quantity_Edit</fullName>
        <active>true</active>
        <description>Restriction to edit the shipment quantity after &apos;Completely shipped&apos;</description>
        <errorConditionFormula>AND(
ISPICKVAL(PMC_CPQ_DeliveryStatus__c, &quot;Completely Shipped&quot;),
ISCHANGED(PMC_CPQ_DeliveryQuantity__c)
)</errorConditionFormula>
        <errorMessage>Restriction to edit the shipment quantity after &apos;Completely shipped&apos;</errorMessage>
    </validationRules>
</CustomObject>